--- a/GreenHouse/Profile.xaml
+++ b/GreenHouse/Profile.xaml
@@ -3,8 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="GreenHouse.Profile">
     <ContentPage.Content>
-        <StackLayout>
-            
-        </StackLayout>
+        <WebView Source="http://enviromesh.tech/user/profile"></WebView>
     </ContentPage.Content>
 </ContentPage>
