--- a/GreenHouse/DeviceGraphs.xaml
+++ b/GreenHouse/DeviceGraphs.xaml
@@ -9,8 +9,8 @@
         <StackLayout>
             
             <!--Header Frame-->
-            <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-                <StackLayout Orientation="Vertical">
+        <Frame Padding="24" CornerRadius="0" Margin="0" BackgroundColor="#BB86FC">
+                <StackLayout BackgroundColor="Transparent" Orientation="Vertical">
                     <!--Change title to dynamic text? e.g Device 1 or Device 2 ETC-->
                     <Label x:Name="Label_DeviceTitle" Text="Device # Dashboard" HorizontalTextAlignment="Center" TextColor="White" FontSize="36"/>
                     <!--Change title to dynamic text? e.g Device 1 or Device 2 ETC-->
@@ -19,7 +19,7 @@
             </Frame>
         
             <!--Timescale Frame (Grid of Timescale Buttons HORIZONTAL)-->
-            <Frame MinimumHeightRequest="60">
+            <Frame MinimumHeightRequest="60" Margin="0">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition></RowDefinition>
@@ -33,66 +33,64 @@
                         <ColumnDefinition></ColumnDefinition>
                     </Grid.ColumnDefinitions>
 
-                <Button x:Name="Button_1H_Graphs" Text="1H" FontSize="10" Grid.Column="0" Clicked="Button_TimeScaleChange"></Button>
-                <Button x:Name="Button_4H_Graphs" Text="4H" FontSize="10" Grid.Column="1" Clicked="Button_TimeScaleChange"></Button>
-                <Button x:Name="Button_12H_Graphs" Text="12H" FontSize="10" Grid.Column="2" Clicked="Button_TimeScaleChange"></Button>
-                <Button x:Name="Button_24H_Graphs" Text="24H" FontSize="10" Grid.Column="3" Clicked="Button_TimeScaleChange"></Button>
-                <Button x:Name="Button_6D_Graphs" Text="6D" FontSize="10" Grid.Column="4" Clicked="Button_TimeScaleChange"></Button>
-                <Button x:Name="Button_30D_Graphs" Text="30D" FontSize="10" Grid.Column="5" Clicked="Button_TimeScaleChange"></Button>
+                <Button x:Name="Button_1H_Graphs" Text="1H" FontSize="9.5" Grid.Column="0" Clicked="Button_TimeScaleChange"></Button>
+                <Button x:Name="Button_4H_Graphs" Text="4H" FontSize="9.5" Grid.Column="1" Clicked="Button_TimeScaleChange"></Button>
+                <Button x:Name="Button_12H_Graphs" Text="12H" FontSize="9.5" Grid.Column="2" Clicked="Button_TimeScaleChange"></Button>
+                <Button x:Name="Button_24H_Graphs" Text="24H" FontSize="9.5" Grid.Column="3" Clicked="Button_TimeScaleChange"></Button>
+                <Button x:Name="Button_6D_Graphs" Text="6D" FontSize="9.5" Grid.Column="4" Clicked="Button_TimeScaleChange"></Button>
+                <Button x:Name="Button_30D_Graphs" Text="30D" FontSize="9.5" Grid.Column="5" Clicked="Button_TimeScaleChange"></Button>
                 </Grid>
             </Frame>
 
             <!--GraphFrame-->
-            <Frame>
-                <RefreshView x:Name="RefreshView_Dashboard" Refreshing="RefreshView_Dashboard_Refreshing" RefreshColor="Red">
-                    <ScrollView>
-                        <StackLayout>
-                            <!--Each Graph Bundled -->
 
-                            <!--Temperature-->
-                            <Frame>
-                                <StackLayout>
-                                    <Label Text="Temperature (Celsius)" TextColor="Black" FontSize="Subtitle" FontAttributes="Bold"/>
-                                    <microcharts:ChartView x:Name="Chart_Temp" HeightRequest="250"/>
-                                </StackLayout>
-                            </Frame>
+            <RefreshView x:Name="RefreshView_Dashboard" Refreshing="RefreshView_Dashboard_Refreshing" RefreshColor="Red">
+                <ScrollView>
+                    <StackLayout BackgroundColor="Transparent">
+                        <!--Each Graph Bundled -->
 
-                            <!--Humidity-->
-                            <Frame>
-                                <StackLayout>
-                                    <Label Text="Humidity" TextColor="Black" FontSize="Subtitle" FontAttributes="Bold"/>
-                                    <microcharts:ChartView x:Name="Chart_Humidity" HeightRequest="250"/>
-                                </StackLayout>
-                            </Frame>
+                        <!--Temperature-->
+                        <Frame>
+                            <StackLayout BackgroundColor="Transparent">
+                                <Label Text="Temperature (Celsius)" FontSize="Subtitle" FontAttributes="Bold"/>
+                                <microcharts:ChartView x:Name="Chart_Temp" HeightRequest="250"/>
+                            </StackLayout>
+                        </Frame>
 
-                            <!--CO2-->
-                            <Frame>
-                                <StackLayout>
-                                    <Label Text="CO2 (PPM)" TextColor="Black" FontSize="Subtitle" FontAttributes="Bold"/>
-                                    <microcharts:ChartView x:Name="Chart_CO2" HeightRequest="250"/>
-                                </StackLayout>
-                            </Frame>
+                        <!--Humidity-->
+                        <Frame>
+                            <StackLayout BackgroundColor="Transparent">
+                                <Label Text="Humidity" FontSize="Subtitle" FontAttributes="Bold"/>
+                                <microcharts:ChartView x:Name="Chart_Humidity" HeightRequest="250"/>
+                            </StackLayout>
+                        </Frame>
 
-                            <!--TVOC-->
-                            <Frame>
-                                <StackLayout>
-                                    <Label Text="Air Contaminants (PPB)" TextColor="Black" FontSize="Subtitle" FontAttributes="Bold"/>
-                                    <microcharts:ChartView x:Name="Chart_TVOC" HeightRequest="250"/>
-                                </StackLayout>
-                            </Frame>
+                        <!--CO2-->
+                        <Frame>
+                            <StackLayout  BackgroundColor="Transparent">
+                                <Label Text="CO2 (PPM)" FontSize="Subtitle" FontAttributes="Bold"/>
+                                <microcharts:ChartView x:Name="Chart_CO2" HeightRequest="250"/>
+                            </StackLayout>
+                        </Frame>
 
-                            <!--Soil Moisture-->
-                            <Frame>
-                                <StackLayout>
-                                <Label Text="Soil Moisture (%)" TextColor="Black" FontSize="Subtitle" FontAttributes="Bold"/>
-                                    <microcharts:ChartView x:Name="Chart_Moisture" HeightRequest="250"/>
-                                </StackLayout>
-                            </Frame>
-                        
-                        </StackLayout>
-                    </ScrollView>
-                </RefreshView>
+                        <!--TVOC-->
+                        <Frame>
+                            <StackLayout BackgroundColor="Transparent">
+                                <Label Text="Air Contaminants (PPB)" FontSize="Subtitle" FontAttributes="Bold"/>
+                                <microcharts:ChartView x:Name="Chart_TVOC" HeightRequest="250"/>
+                            </StackLayout>
+                        </Frame>
 
-            </Frame>
-        </StackLayout>
+                        <!--Soil Moisture-->
+                        <Frame>
+                            <StackLayout BackgroundColor="Transparent">
+                                <Label Text="Soil Moisture (%)" FontSize="Subtitle" FontAttributes="Bold"/>
+                                <microcharts:ChartView x:Name="Chart_Moisture" HeightRequest="250"/>
+                            </StackLayout>
+                        </Frame>
+
+                    </StackLayout>
+                </ScrollView>
+            </RefreshView>
+    </StackLayout>
 </ContentPage>
