Splash Screen Demo

--- a/GreenHouse.Android/Resources/layout/Activity_Splash.xml
+++ b/GreenHouse.Android/Resources/layout/Activity_Splash.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +7,18 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
+	<ImageView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+		android:src="@drawable/logo"/>
+
+	<TextView
+        android:text="EnviromeshDevTeam - © Copyright 2021"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+		android:autoSizeTextType="uniform"
+		android:gravity="center"/>
+    
 
 	<com.airbnb.lottie.LottieAnimationView
 		android:id="@+id/animationView"
@@ -21,4 +33,4 @@
 
 
 
-</RelativeLayout>
+</LinearLayout>
